syntax = "proto3";

option go_package = "awesomeProject/proto";

package proto;

service Person {
    rpc Get(GetRequest) returns (GetPerson) {}
    rpc Create (CreateRequest) returns (CreatePerson) {}
    rpc ChangeName (ChangeNameRequest) returns (ChangePersonName) {}
    rpc ChangeAmount (ChangeAmountRequest) returns (ChangePersonAmount) {}
    rpc Delete (DeleteRequest) returns (DeletePerson) {}
}

message GetRequest {
    string name = 1;
}

message CreateRequest {
    string name = 1;
    int64 amount = 2;
}

message ChangeNameRequest {
    string name = 1;
    string new_name = 2;
}

message ChangeAmountRequest {
    string name = 1;
    int64 new_amount = 2;
}

message DeleteRequest {
    string name = 1;
}

message GetPerson {
    string name = 1;
    int64 amount = 2;
}

message CreatePerson {
    bool ok = 1;
}

message ChangePersonName {
    bool ok = 1;
}

message ChangePersonAmount {
    bool ok = 1;
}

message DeletePerson {
    bool ok = 1;
}
